--- a/cartridges/openshift-origin-cartridge-mysql/bin/install
+++ b/cartridges/openshift-origin-cartridge-mysql/bin/install
@@ -8,6 +8,14 @@ case "$1" in
     version="$2"
 esac
 
+# We want to log to stdout, but MySQL will try appending `.err` to any
+# file provided to --log-error. Work around it by symlinking to /dev/stdout.
+#
+# See: http://bugs.mysql.com/bug.php?id=57690
+if [ ! -e $OPENSHIFT_MYSQL_DIR/stdout.err ]; then
+  ln -s /dev/stdout $OPENSHIFT_MYSQL_DIR/stdout.err
+fi
+
 # Generate username, password, and db name and create env variables
 echo 'Generating username and password'
 
